# morpheus-spatial

./: .gitignore  README.md  compare_test.ipynb  example_notebook.ipynb  main.py  main_melanoma.py  pyproject.toml  report.html  requirements.txt  tmp  tutorial_notebook.ipynb
examples/: tutorial.ipynb
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: metrics.csv
reproduction/: analysis_helper.py  figure_helper.py  make_figure.ipynb  reproduction_notebook.ipynb  supplemental.ipynb
src/morpheus/: __init__.py  constants.py
src/morpheus/api/: defaults.py  interfaces.py
src/morpheus/classification/: __init__.py  classifier.py  threshold.py  train.py
src/morpheus/confidence/: __init__.py
src/morpheus/configuration/: Types.py  __init__.py
src/morpheus/counterfactual/: __init__.py  cf copy.py  cf.py  cf_deprecated.py  cf_in_progress.py  cf_pytorch.py  cf_tf.py  generate.py
src/morpheus/datasets/: DataClass.py  __init__.py  preprocessing.py  spatial_dataset.py  torch_dataset.py
src/morpheus/models/: ModelClass.py
src/morpheus/train/: __init__.py  classifier.py  train_classifier.py
src/morpheus/utils/: gradients.py  patchify.py  saving.py  set_seeds.py
tests/datasets/: test_spatial_dataset.py
tests/utils/: test_gradients.py  test_patchify.py  test_saving.py
