[tool.poetry]
name = "morpheus-spatial"
version = "0.4.0"
description = ""
authors = ["neonine2 <jerry.wang95@yahoo.ca>"]
readme = "README.md"
packages = [{include = "morpheus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
lightning = "^2.0.0"
pandas = "^2.2.1"
torchvision = "^0.15.1"
h5py = "^3.10.0"
dill = "^0.3.8"
scikit-learn = "^1.4.1.post1"
tensorflow = "2.11.1"
torch = "2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
