[tool.poetry]
name = "morpheus-spatial"
version = "1.0.6"
description = ""
authors = ["neonine2 <jerry.wang95@yahoo.ca>"]
readme = "README.md"
packages = [{include = "morpheus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
lightning = "^2.0.0"
pandas = "2.2.1"
torchvision = "^0.15.1"
h5py = "^3.10.0"
dill = "^0.3.8"
scikit-learn = ">=1.5.0"
torch = "2.0.0"
ray = "^2.11.0"
aiohttp = ">=3.9.4"
idna = ">=3.7"
pillow = ">=10.3.0"
Jinja2 = ">=3.1.4"
numpy = "<=1.26"
certifi = ">=2024.7.4"

[tool.poetry.extras]
audio = ["torchaudio"]

[tool.poetry.group.test.dependencies]
pytest = "^8.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
